<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="50dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/register"
                android:textColor="@android:color/black"
                android:textSize="@dimen/header_register_text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textColor="@android:color/black"
                        />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00000000"
                        android:hint="@string/your_name"
                        android:inputType="text"
                        android:textSize="@dimen/register_text_size"
                        android:textColorHint="@color/text_color_text_register" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Surname"
                        android:textColor="@android:color/black" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edSurname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00000000"
                        android:hint="@string/your_surname"
                        android:inputType="text"
                        android:textSize="@dimen/register_text_size"
                        android:textColorHint="@color/text_color_text_register" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_sex_register"
                android:textColor="@android:color/black" />

            <RadioGroup
                android:id="@+id/rgSex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:checkedButton="@+id/rbMale">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="male" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="female" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_e_mail"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/your_email"
                android:inputType="text"
                android:textSize="@dimen/register_text_size"
                android:textColorHint="@color/text_color_text_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/head_student_id"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edStudentId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/student_id"
                android:inputType="number"
                android:textSize="@dimen/register_text_size"
                android:textColorHint="@color/text_color_text_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mobile"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:textSize="@dimen/register_text_size"
                android:textColorHint="@color/text_color_text_register" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Username"
                android:textColor="@android:color/black" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00000000"
                android:hint="@string/username"
                android:inputType="text"
                android:textSize="@dimen/register_text_size"
                android:textColorHint="@color/text_color_text_register" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textColor="@android:color/black" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00000000"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/register_text_size"
                        android:textColorHint="@color/text_color_text_register" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/re_password_register"
                        android:textColor="@android:color/black" />

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edRePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="#00000000"
                        android:hint="@string/re_password_register"
                        android:inputType="textPassword"
                        android:textSize="@dimen/register_text_size"
                        android:textColorHint="@color/text_color_text_register" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btnRegisterOk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/ok_button"
                android:textColor="@drawable/selector_user_main_fragment_text_button"
                android:textAllCaps="false"
                android:background="@drawable/selector_user_main_fragment_button_overlay"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>